@@ -1,5 +1,8 @@
 1.3.1 to 1.3.2
 ----------------------------------------------------------------------
+- Alarms now remove old events by default.  Use "auto-clean" attribute
+  in eventconf files.  Files eventconf.xml and Standard.events.xml have
+  been modified with this optional attribute.  Adjust to your requirements.
 - Reordered the top offenders from worst to best.
 - Added a date to the availability reports to choose which day to
   run.
